# cwms-database

./: .dockerignore  .gitignore  .sqlfluff  CHANGELOG-flyway.md  Dockerfile  Dockerfile.testdb  README.manualchanges.md  README.md  Schema Version 18.1 Changes.docx  build.gradle  build.xml  build_db_parameters_def.py  builduser_grants.sql  create_office_images.sh  cwmsdb_documentor.py  depotadd.ksh  depotedit.ksh  docker-compose.README.md  docker-compose.yml  get_hec-datatypes.py  gradle.properties  importCWMS_DB.sql  pom.xml  run_full_sequence.sh  schema_18.1_changes.md  settings.gradle  teamcity_overrides.xml  wcdba_overrides.xml
.teamcity/: pom.xml  settings.kts
Streams/: InstallEds_dest.sql  InstallEds_src.sql  InstallPackages.sql  InstallStreams.sql  StartStreams.sql  UnInstallEds_dest.sql  UnInstallEds_src.sql  UpdatePackages_dest.sql  UpdatePackages_src.sql  conflict_handlers_pkg.sql  conflict_handlers_pkg_body.sql  create_accounts.sql  create_accounts_dest.sql  create_accounts_src.sql  create_link_dest.sql  create_streams_tables.sql  create_streams_user.sql  debug_streams.sql  drop_streams_user.sql  eds_support_install.sql  eds_support_remove.sql  kill_streams_session.sql  prvtbsxd.plb  prvthsxd.plb  (+2 more)
cwmsdata/: Dockerfile  README.md  entrypoint.sh  setup.cfg
cwmsdata/src/cwmsdata/: __init__.py
cwmsdata/src/cwmsdata/connection/: __init__.py
cwmsdata/src/cwmsdata/cwms_log/: cwms_log.yml  cwms_logger.py
cwmsdata/src/cwmsdata/model/cwms/: cwms_loc.py  cwms_ts.py  cwms_util.py  init_ts_data.py
cwmsdata/src/cwmsdata/model/usgs/: __init__.py  parse_usgs_ts.py
(+2494 files in other folders)
