[metadata]
name = cwmsdata
version = 0.1.0
author = USACE
author_email = author@example.com
description = Init CWMS Oracle with data
long_description = file: README.md, LICENSE
license = MIT
long_description_content_type = text/markdown
url = https://docs.rsgis.dev
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = file:requirements.txt
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
cwmsdata =  data/*

[options.entry_points]
console_scripts =
    usgs-sites = cwmsdata.bin:usgs_sites.usgs_sites
    usgs-ts = cwmsdata.bin:usgs_sites_ts.usgs_sites_ts
